# miside-secret-menu-unlocker

./: .gitignore  Cargo.toml  LICENCE  README.md  build.rs
.github/workflows/: build.yml
Plugin/: SecretMenu.cs  SecretMenu.csproj
crates/loader/: Cargo.toml
crates/loader/src/: main.rs
crates/patcher/: Cargo.toml  build.rs
crates/patcher/src/: lib.rs
src/: lib.rs
