[workspace]
members = [
  "crates/patcher",
  "crates/loader",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/feeeek/miside-secret-menu-unlocker"
version = "0.0.2"

[workspace.dependencies]
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-panic = "0.1.2"
tracing-subscriber = "0.3.19"

[workspace.dependencies.windows]
features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Memory",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_Security",
]
version = "0.58.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
