[package]
name = "SecretMenuLauncher"
edition.workspace = true
version.workspace = true

[dependencies]
dll-syringe = "0.15.2"
tracing-appender.workspace = true
tracing-panic.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
windows.workspace = true

[dependencies.secretmenu_native]
path = "../patcher"
