[package]
name = "secretmenu_native"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
pelite = "0.10.0"
tracing-appender.workspace = true
tracing-panic.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
windows.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
